-- Added Element-UI -- Added version component -- Added props to toolbar component -- Added more GUI elements

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "euno-payout",
-  "version": "0.0.1",
+  "version": "0.0.1-alpha",
   "description": "EUNO payout tool based on ElectrumJS, written in VueJS",
   "main": "index.js",
   "scripts": {
@@ -25,6 +25,7 @@
     "bitcoind-rpc-client": "^0.3.1",
     "electron-json-storage": "^4.1.7",
     "electron-log": "^3.0.1",
+    "element-ui": "^2.12.0",
     "source-map-support": "^0.5.9",
     "underscore": "^1.9.1",
     "vue-router": "^3.0.2"
