-- Styled credentials test result notifications -- Added loader while creating transaction -- Fixed bug when unlocking wallet while the wallet is already unlocked -- New alpha version number

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "euno-payout",
-  "version": "0.0.2",
+  "version": "1.0.0-alpha",
   "description": "EUNO payout tool based on ElectrumJS, written in VueJS",
   "main": "index.js",
   "scripts": {
