--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "euno-rema",
-  "version": "1.0.0-beta2",
+  "version": "1.0.0",
   "description": "EUNO REMA is built with ElectrumJS, written in VueJS",
   "main": "index.js",
   "scripts": {
